--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
-<h1>Hello, world</h1>
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Rafael C&aacute;rdenas - Software and Computer Engineer</title>
+    <meta name="description" content="Software and Computer Engineer">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <script src="js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,300,500,300italic,400italic,500italic,700italic' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <!--[if lt IE 8]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+    <div class="header-container">
+      <header class="wrapper clearfix">
+        <h1 class="title">Rafael C&aacute;rdenas</h1>
+        <!-- <nav>
+          <ul>
+            <li><a href="#">en</a></li>
+            <li><a href="#">es</a></li>
+          </ul>
+        </nav> -->
+      </header>
+    </div>
+
+    <div class="main-container">
+      <div class="main wrapper clearfix">
+        <article>
+          <header>
+            <h2>Software and Computer Engineer</h2>
+          </header>
+          <section>
+            <p>
+              Specialized in mobile devices, embedded computer systems, wireless communications,
+              visual computing, and real-time controls. Focused on creating innovative solutions to
+              complex, large scale and high impact technological challenges.
+            </p>
+          </section>
+          <footer>
+            <p>
+              Rafael is currently CTO at <a href="http://civica.digital">Cívica Digital</a> based
+              in Monterrey, Mexico. He previously worked for four years as a Software Engineer at
+              Google in Mountain View, CA, where he acted as Tech Lead in the iOS Location Platform
+              (Google Maps) team and as Information Security Engineer in Google's Mobile Security
+              team. He worked and collaborated in mobile apps like Google Search, Google+, Google
+              Photos, Google Hangouts, and Google Calendar. He's a graduate of Tecnológico de
+              Monterrey with a Bachelor's degree in Computer Science.
+            </p>
+          </footer>
+        </article>
+
+        <aside>
+          <ul>
+            <li><a href="https://mx.linkedin.com/in/rafaelcr">Linkedin</a></li>
+            <li><a href="https://github.com/rafaelcr">Github</a></li>
+            <li><a href="https://twitter.com/rafaelcr">Twitter</a></li>
+          </ul>
+        </aside>
+
+      </div> <!-- #main -->
+    </div> <!-- #main-container -->
+
+    <!-- <div class="footer-container">
+      <footer class="wrapper">
+        <h3>rafael at rafaelcr dot com</h3>
+      </footer>
+    </div> -->
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    </script>
+  </body>
+</html>
