--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
     <div class="header-container">
       <header class="wrapper clearfix">
         <h1 class="title">Rafael C&aacute;rdenas</h1>
-        <!-- <nav>
-          <ul>
-            <li><a href="#">en</a></li>
-            <li><a href="#">es</a></li>
-          </ul>
-        </nav> -->
       </header>
     </div>
 
@@ -61,6 +55,7 @@
         </article>
 
         <aside>
+          <img id="portrait" src="img/square.jpg"/>
           <ul>
             <li><a href="https://mx.linkedin.com/in/rafaelcr">Linkedin</a></li>
             <li><a href="https://github.com/rafaelcr">Github</a></li>
